[tool.poetry]
name = "gprotobuf-decoder"
version = "0.1.0"
description = "Convert Google Authenticator transfer links to plain otpauth links."
authors = ["dmitry.finko <dmit.finn@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.2"
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
